2005-08-17 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* include/avr/io90pwmx.h: remove PORTxy definitions that are
	duplicated from avr/portpins.h.

2005-08-16 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Add support for ATmega329/3290/649/6490, contributed by Anatoly
	Sokolov.
	* configure.ac: add new devices.
	* devtools/gen-avr-lib-tree.sh: (Ditto.)
	* include/avr/Makefile.am: add iom329.h/iom3290.h/iom649.h/iom6490.h.
	* include/avr/io.h: add new devices
	* include/avr/iom329.h: new file.
	* include/avr/iom3290.h: new file.
	* include/avr/iom649.h: new file.
	* include/avr/iom6490.h: new file.
	* include/avr/wdt.h: (Ditto.)
	* doc/api/main_page.dox: document new devices.
	* doc/api/using-tools.dox: (Ditto.)

2005-08-16 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Add support for AT90PWM2/3, contribute by Andrey Pashchenko.
	* AUTHORS: add Andrey Pashchenko.
	* configure.ac: add AC_NO_EXECUTABLES to avoid chicken-and-egg
	situation when configuring without any existing avr-libc; add
	more quotes (but it still complains), add tests for AT90PWM2/3.
	* devtools/gen-avr-lib-tree.sh: add AT90PWM2/3.
	* include/avr/Makefile.am: include io90pwmx.h.
	* include/avr/io90pwmx.h: new file.
	* include/avr/io.h: add AT90PWM2/3.
	* include/avr/wdt.h: (Ditto.)
	* doc/api/main_page.dox: document the addition of AT90PWM2/3.
	* doc/api/using-tools.dox: (Ditto.)

2005-08-15 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/api/tools-install.dox (avr-libc): fix a missing "tar" command.

2005-08-14 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* avr-libc.spec.in: bump required tool versions.
	* doc/api/Makefile.am: Fix finding demo.fig, add avrs.png.
	* doc/api/avrs.png-save: New file.
	* doc/api/doxygen.config.in: Revamp the layout of the HTML pages.
	* doc/api/dox.css: (Ditto.)
	* doc/api/dox_html_header: (Ditto.)
	* doc/api/main_page.dox: Add explanations about the intented
	standard conformance, as well as about the (non-)reentrancy of
	our library functions.  Other minor corrections.